# modelServer

./: .gitignore  README.md  model.onnx  wine_xgboost_single.onnx
deploy/: kserve-inferenceservice.yaml  kserve-inferenceserviceSecret.yaml  kserve-storage-config.yaml
deploy/base/: k8s-metrics.yaml
deploy/overlays/test/: kserve-inferenceservice.yaml  kserve-test.yaml  kserve-xgboost-wine.yaml
models/: README.md
models/iris_xgboost/: config.pbtxt
models/iris_xgboost/1/: model.onnx
models/wine_xgboost/: config.pbtxt
models/wine_xgboost/1/: model.onnx
python/: IRIS_xgb_trainAndConvertModel.py  WINE_xgb_trainAndConvertModel.py  model.pkl  pyproject.toml  wine_xgboost.onnx
scripts/: MAKEFILE  upload-models.ps1
