[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Wolfgang Vitzthum",email = "wvitzthum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "skl2onnx (>=1.18.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "onnxmltools (>=1.13.0,<2.0.0)",
    "onnxruntime (>=1.21.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
